
2009-07-05
Initial Project in ajcodekatas
Lexer and tests, initial version
PrintCommand
PrintLineCommand
AddExpression, SubtractExpression
Parser and tests, initial version
AjClipper.Console running HelloWorld.prg

2009-07-06
If Command parsing and execution (initial version)
If with Else
If with ElseIf