@@ -90,9 +90,6 @@
     <milliseconds>232</milliseconds>
     <violations />
   </sourcecode>
-  <project key="2076494680">
-    <configuration>DEBUG;TRACE</configuration>
-  </project>
   <sourcecode name="BaseCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
       <timestamp>07/05/2009 17:17:12</timestamp>
@@ -111,86 +108,6 @@
     <milliseconds>379</milliseconds>
     <violations />
   </sourcecode>
-  <sourcecode name="IfCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>07/05/2009 17:17:12</timestamp>
-      <milliseconds>220</milliseconds>
-    </settings>
-    <timestamp>07/06/2009 08:47:29</timestamp>
-    <milliseconds>740</milliseconds>
-    <violations>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to conditions must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>21</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to commands must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>22</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to commands must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>27</line>
-        <warning>False</warning>
-      </violation>
-    </violations>
-  </sourcecode>
-  <sourcecode name="CompositeCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>07/05/2009 17:17:12</timestamp>
-      <milliseconds>220</milliseconds>
-    </settings>
-    <timestamp>07/05/2009 18:09:06</timestamp>
-    <milliseconds>995</milliseconds>
-    <violations>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to commands must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>23</line>
-        <warning>False</warning>
-      </violation>
-    </violations>
-  </sourcecode>
-  <sourcecode name="PrintCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>07/05/2009 17:17:12</timestamp>
-      <milliseconds>220</milliseconds>
-    </settings>
-    <timestamp>07/05/2009 19:33:26</timestamp>
-    <milliseconds>606</milliseconds>
-    <violations>
-      <violation namespace="Microsoft.StyleCop.CSharp.MaintainabilityRules" rule="FieldsMustBePrivate" ruleCheckId="SA1401">
-        <context>Fields must be declared with private access. Use properties to expose fields.</context>
-        <line>12</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.NamingRules" rule="AccessibleFieldsMustBeginWithUpperCaseLetter" ruleCheckId="SA1307">
-        <context>Public and internal fields must start with an upper-case letter: expressions.</context>
-        <line>12</line>
-        <warning>False</warning>
-      </violation>
-    </violations>
-  </sourcecode>
-  <sourcecode name="PrintLineCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>07/05/2009 17:17:12</timestamp>
-      <milliseconds>220</milliseconds>
-    </settings>
-    <timestamp>07/05/2009 19:40:36</timestamp>
-    <milliseconds>552</milliseconds>
-    <violations>
-      <violation namespace="Microsoft.StyleCop.CSharp.MaintainabilityRules" rule="FieldsMustBePrivate" ruleCheckId="SA1401">
-        <context>Fields must be declared with private access. Use properties to expose fields.</context>
-        <line>12</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.NamingRules" rule="AccessibleFieldsMustBeginWithUpperCaseLetter" ruleCheckId="SA1307">
-        <context>Public and internal fields must start with an upper-case letter: expressions.</context>
-        <line>12</line>
-        <warning>False</warning>
-      </violation>
-    </violations>
-  </sourcecode>
   <sourcecode name="SetVariableCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
       <timestamp>07/05/2009 17:17:12</timestamp>
@@ -199,66 +116,6 @@
     <timestamp>07/05/2009 19:14:40</timestamp>
     <milliseconds>391</milliseconds>
     <violations />
-  </sourcecode>
-  <sourcecode name="Lexer.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>07/05/2009 17:17:12</timestamp>
-      <milliseconds>220</milliseconds>
-    </settings>
-    <timestamp>07/05/2009 19:43:04</timestamp>
-    <milliseconds>256</milliseconds>
-    <violations>
-      <violation namespace="Microsoft.StyleCop.CSharp.SpacingRules" rule="SymbolsMustBeSpacedCorrectly" ruleCheckId="SA1003">
-        <context>The spacing around the symbol '&gt;' is invalid.</context>
-        <line>225</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to NextOperator must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>78</line>
-        <warning>False</warning>
-      </violation>
-    </violations>
-  </sourcecode>
-  <sourcecode name="Parser.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>07/05/2009 17:17:12</timestamp>
-      <milliseconds>220</milliseconds>
-    </settings>
-    <timestamp>07/05/2009 19:40:00</timestamp>
-    <milliseconds>703</milliseconds>
-    <violations>
-      <violation namespace="Microsoft.StyleCop.CSharp.OrderingRules" rule="UsingDirectivesMustBeOrderedAlphabeticallyByNamespace" ruleCheckId="SA1210">
-        <context>Using directives must be sorted alphabetically by the namespaces.</context>
-        <line>5</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to ParseLineCommand must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>33</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to lexer must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>38</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to lexer must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>48</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to TryParse must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>68</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to lexer must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>99</line>
-        <warning>False</warning>
-      </violation>
-    </violations>
   </sourcecode>
   <sourcecode name="ParserException.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
@@ -277,21 +134,6 @@
     <timestamp>07/05/2009 17:31:54</timestamp>
     <milliseconds>38</milliseconds>
     <violations />
-  </sourcecode>
-  <sourcecode name="BinaryExpression.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>07/05/2009 17:17:12</timestamp>
-      <milliseconds>220</milliseconds>
-    </settings>
-    <timestamp>07/05/2009 17:31:46</timestamp>
-    <milliseconds>333</milliseconds>
-    <violations>
-      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
-        <context>The call to EvaluateValues must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
-        <line>29</line>
-        <warning>False</warning>
-      </violation>
-    </violations>
   </sourcecode>
   <sourcecode name="ExpressionUtilities.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
@@ -319,5 +161,86 @@
     <timestamp>07/05/2009 17:42:02</timestamp>
     <milliseconds>521</milliseconds>
     <violations />
+  </sourcecode>
+  <sourcecode name="PrintCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>07/05/2009 17:17:12</timestamp>
+      <milliseconds>220</milliseconds>
+    </settings>
+    <timestamp>07/06/2009 08:51:47</timestamp>
+    <milliseconds>913</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="WhileCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>07/05/2009 17:17:12</timestamp>
+      <milliseconds>220</milliseconds>
+    </settings>
+    <timestamp>07/06/2009 12:48:59</timestamp>
+    <milliseconds>40</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="PrintLineCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>07/05/2009 17:17:12</timestamp>
+      <milliseconds>220</milliseconds>
+    </settings>
+    <timestamp>07/06/2009 08:51:58</timestamp>
+    <milliseconds>900</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="Lexer.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>07/05/2009 17:17:12</timestamp>
+      <milliseconds>220</milliseconds>
+    </settings>
+    <timestamp>07/06/2009 08:52:41</timestamp>
+    <milliseconds>901</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="BinaryExpression.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>07/05/2009 17:17:12</timestamp>
+      <milliseconds>220</milliseconds>
+    </settings>
+    <timestamp>07/06/2009 08:53:12</timestamp>
+    <milliseconds>900</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="Parser.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>07/05/2009 17:17:12</timestamp>
+      <milliseconds>220</milliseconds>
+    </settings>
+    <timestamp>07/06/2009 14:16:47</timestamp>
+    <milliseconds>450</milliseconds>
+    <violations />
+  </sourcecode>
+  <project key="2076494680">
+    <configuration>DEBUG;TRACE</configuration>
+  </project>
+  <sourcecode name="CompositeCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>07/05/2009 17:17:12</timestamp>
+      <milliseconds>220</milliseconds>
+    </settings>
+    <timestamp>07/06/2009 14:24:55</timestamp>
+    <milliseconds>688</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="IfCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>07/05/2009 17:17:12</timestamp>
+      <milliseconds>220</milliseconds>
+    </settings>
+    <timestamp>07/06/2009 14:25:30</timestamp>
+    <milliseconds>679</milliseconds>
+    <violations>
+      <violation namespace="Microsoft.StyleCop.CSharp.ReadabilityRules" rule="PrefixLocalCallsWithThis" ruleCheckId="SA1101">
+        <context>The call to conditions must begin with the 'this.' prefix to indicate that the item is a member of the class.</context>
+        <line>48</line>
+        <warning>False</warning>
+      </violation>
+    </violations>
   </sourcecode>
 </stylecopresultscache>
